<resources>
    <string name="app_name">Memories</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Sign Up</string>
    <string name="back_to_login">Already Have an Account? Log In.</string>
    <string name="signup">Sign Up</string>
    <string name="title_hint">Set a title</string>
</resources>
