<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPasswordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#1e2880">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPasswordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBoxId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Keep Me Logged In"
                android:textSize="20sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonLoginId"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="#1e2880"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonSignupId"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="#1e2880"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</ScrollView>